# holoviews

./: .appveyor.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  Conversion_Example.ipynb  LICENSE.txt  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  convert.py  dodo.py  environment.yml  lazy_data_doc.ipynb  meta.yaml  nbstrip_jq.sh  pixi.toml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  version.py
.github/: CODE_OF_CONDUCT.md  issue_template.md  pull_request_template.md  release.yml  renovate.json5  test-matrix.json  zizmor.yaml
.github/workflows/: build.yaml  build.yml  conventional_commits.yaml  docs.yaml  docs.yml  downstream_tests.yaml  issue-metrics.yml  labels.yml  lock.yaml  metrics.yaml  nightly_lock.yaml  pixi_lock.yaml  png_optimize.yaml  pr_title.yaml  test.yaml  test.yml  zizmor.yaml
binder/: environment.yml  postBuild
conda.recipe/: build.sh  meta.yaml
dataviews/: __init__.py  boundingregion.py  collector.py  dataviews.py  interface.py  ipython.py  ndmapping.py  odict.py  operation.py  options.py  plots.py  sheetcoords.py  sheetviews.py  styles.py  testing.py  transform.py  views.py
dataviews/interface/: pandas.py  seaborn.py
dataviews/ipython/: __init__.py  display_hooks.py  jsslider.jinja  magics.py  widgets.py
dataviews/plotting/: __init__.py  dataplots.py  pandas.py  seaborn.py  sheetplots.py  viewplots.py
dataviews/sheetviews/: __init__.py  sheetcoords.py  sheetviews.py
dataviews/styles/: __init__.py  default.mplstyle
dataviews/test/: testboundingregion.py  testcomparisons.py  testndmapping.py  testsheetviews.py  testviews.py  utils.py
dataviews/tests/: testboundingregion.py  testcomparisons.py  testmagics.py  testndmapping.py  testsheetviews.py  testviews.py  utils.py  verify_notebook.py
doc/: FAQ.md  FAQ.rst  Homepage.ipynb  Makefile  Roadmap.rst  about.md  about.rst  conf.py  features.md  features.rst  generate_modules.py  index.ipynb  index.md  index.rst  install.md  install.rst  ipystartup.py  latest_news.html  mandelbrot.npy  notebook.json  notebook.tests  releases.md  releases.rst  roadmap.md  roadmap.rst  site_map.md  site_map.rst
doc/Developer_Manual/: index.rst
doc/Examples/: Earthquake_Visualization.ipynb  HipsterDynamics.ipynb  Logistic_Map.ipynb  Reaction-diffusion.ipynb  SRI_Model.ipynb  index.rst
doc/Getting_Started/: Customization.rst  Gridded_Datasets.rst  Introduction.rst  Live_Data.rst  index.rst
doc/Reference_Manual/: index.rst
doc/Tutorials/: Bokeh_Backend.ipynb  Bokeh_Elements.ipynb  Collector.ipynb  Columnar_Data.ipynb  Composing_Data.ipynb  Containers.ipynb  Continuous_Coordinates.ipynb  Continuous_Coords.ipynb  DataView_Tutorial.ipynb  Dynamic_Map.ipynb  Elements.ipynb  Exploring_Data.ipynb  Exporting.ipynb  HoloMap_Introduction.ipynb  HoloViews_Components.ipynb  HoloViews_Elements.ipynb  HoloViews_Introduction.ipynb  HoloViews_Showcase.ipynb  HoloViews_Tutorial.ipynb  Introduction.ipynb  Linked_Streams.ipynb  NdMapping_UK_Forecast.ipynb  Operations.ipynb  Options.ipynb  Pandas_Conversion.ipynb  Pandas_Seaborn.ipynb  Plotly_Elements.ipynb  Plots_and_Renderers.ipynb  Rich_Display.ipynb  Sampling_Data.ipynb  Showcase.ipynb  Streams.ipynb  Styles_and_Channels.ipynb  Transforming_Data.ipynb  index.rst
doc/User_Guide/: Annotating_Data.rst  Applying_Transformations.rst  Data_Pipelines.rst  Dimensioned_Containers.rst  Exporting_and_Archiving.rst  Gridded_Datasets.rst  Plots_and_Renderers.rst  Plotting_with_Bokeh.rst  Plotting_with_Matplotlib.rst  Responding_to_Events.rst  Tabular_Datasets.rst  index.rst
doc/_static/: dataviews.css  dataviews.js  holoviews.css  holoviews.js  rtd_bootstrap.css
doc/_templates/: footer.html  layout.html  page.html
doc/assets/: README.rst
doc/developer_guide/: index.md
doc/getting_started/: Customization.md  Customization.rst  Gridded_Datasets.md  Gridded_Datasets.rst  Introduction.md  Introduction.rst  Live_Data.md  Live_Data.rst  Tabular_Datasets.md  Tabular_Datasets.rst  index.md  index.rst
doc/holoviews_theme/: layout.html  search.html
doc/reference_manual/: index.md  index.rst
doc/showcase/: boids.rst  hipster_dynamics.rst  index.rst  lsystems.rst  square_limit.rst  sri_model.rst
doc/test_data/: README.rst
doc/user_guide/: Annotating_Data.md  Applying_Customizations.md  Applying_Customizations.rst  Applying_Transformations.rst  Building_Composite_Objects.md  Building_Composite_Objects.rst  Colormaps.md  Colormaps.rst  Composing_Elements.md  Composing_Elements.rst  Configuring.md  Configuring_HoloViews.rst  Continuous_Coordinates.md  Continuous_Coordinates.rst  Custom_Interactivity.md  Custom_Interactivity.rst  Customizing_Plots.md  Customizing_Plots.rst  Dashboards.md  Dashboards.rst  Data_Pipelines.md  Data_Pipelines.rst  Deploying_Bokeh_Apps.md  Large_Data.md  (+37 more)
examples/: 03-Customizing_Plots.ipynb  README.md  README.rst  conftest.py  examples.py
holoviews/: __init__.py  __version.py  _version.py  annotators.py  links.py  pyodide.py  selection.py  streams.py  testing.py  util.py
scripts/: build_conda.sh  check_latest_packages.py  download_data.py  download_data.sh  editable.py  hatch_build.py  sync_git_tags.py
tests/: __init__.py  testaliases.py  testannotations.py  testapiconsistency.py  testarchivecomparison.py  testarchives.py  testbinneddatasets.py  testbokehcallbacks.py  testbokehgraphs.py  testbokehradialheatmap.py  testbokehutils.py  testbokehwidgets.py  testboundingregion.py  testcallable.py  testcharts.py  testcollation.py  testcollector.py  testcolumns.py  testcomms.py  testcomparisonchart.py  testcomparisoncomposite.py  testcomparisondimension.py  testcomparisonpath.py  testcomparisonraster.py  testcomparisons.py  testcompositecomparisons.py  testcomposites.py  testcoreutils.py  testdataset.py  testdatashader.py  testdimensioncomparisons.py  testdimensions.py  testdimselect.py  testdynamic.py  testelementconstructors.py  testelementindexing.py  testelementranges.py  testelements.py  testelementutils.py  testellipsis.py  (+37 more)
(+1286 files in other folders)
