[build-system]
requires = [
    "param >=1.7.0",
    "pyct >=0.4.4",
    "setuptools >=30.3.0",
]

[tool.pytest.ini_options]
addopts = "-p no:dash"
filterwarnings = [
    # Numpy warning triggered in Bokeh, when timedelta or datetime numpy scalar are compared to a numerical scalar
    "ignore:elementwise comparison failed:DeprecationWarning:bokeh.core.property.bases",
    "ignore:dropping variables using `drop` will be deprecated; using drop_vars is encouraged:PendingDeprecationWarning:xarray.core.dataarray",
    # 2022-12: Plotly don't use packagings version yet
    "ignore:distutils Version classes are deprecated:DeprecationWarning:plotly.graph_objs",
    # 2022-12: A weird warning which could be related to Datashader
    "ignore:Please use `append` from the:DeprecationWarning:pickle",
    # 2022-12: Warnings which should be fixed in Panel
    "ignore:make_current is deprecated; start the event loop first:DeprecationWarning:panel.io.server",
    # 2023-01: Numpy 1.24 warnings
    "ignore:`.+?` is a deprecated alias for `.+?`.:DeprecationWarning:bokeh",  # https://github.com/bokeh/bokeh/pull/12690
    "ignore:`.+?` is a deprecated alias for `.+?`.:DeprecationWarning:cupy",  # https://github.com/cupy/cupy/pull/7245
    "ignore:`.+?` is a deprecated alias for `.+?`.:DeprecationWarning:plotly.express.imshow_utils",  # https://github.com/plotly/plotly.py/pull/3997
    "ignore:`.+?` is a deprecated alias for `.+?`.:DeprecationWarning:skimage.util.dtype",  # https://github.com/scikit-image/scikit-image/pull/6637
    # 2023-01: Sqlalchemy 2.0 warning:
    "ignore: Deprecated API features detected:DeprecationWarning:ibis.backends.base.sql.alchemy",  # https://github.com/ibis-project/ibis/issues/5048
    # 2023-03: Already handling the nested sequence
    "ignore:Creating an ndarray from ragged nested sequences:numpy.VisibleDeprecationWarning:holoviews.core.data.spatialpandas"
]

[tool.ruff]
target-version = "py37"

select = [
    "E",
    "F",
    "ICN",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
    "UP",
    "W",
]

ignore = [
    "E402",     # Module level import not at top of file
    "E501",     # Line too long
    "E712",     # Comparison to true should be is
    "E731",     # Do not assign a lambda expression, use a def
    "E741",     # Ambiguous variable name
    "F405",     # From star imports
    "PLR2004",  # Magic value used in comparison
    "RUF005",   # Consider {expr} instead of concatenation
    "PLR091",   # Too many arguments/branches/statements
    "PLE0604",  # Invalid object in `__all__`, must contain only strings
    "PLE0605",  # Invalid format for __all__
    "E701",     # Multiple statements on one line
]

fix = true
unfixable = [
    "F401",     # Unused imports
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403"]
"holoviews/tests/*" = ["RUF001", "RUF002", "RUF003"]  # Ambiguous unicode character

[tool.codespell]
ignore-words-list = "lod,nd,ndoes,reenabled,spreaded,whn"
skip = "doc/generate_modules.py"
write-changes = true
